[package]
name = "raylib_sls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
parking_lot = "0.12.4"
raylib = "5.5.1"
serde_json = "1.0.143"
slslib = {path="slslib"}
[profile.dev]
opt-level = 3
[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#uncomment for flamegraph
debug = true
